Added URL schema vulnerability and fixed a bug with Buy/Sell Stock.

--- a/PandemobiumStockTrader/iOS/PandemobiumV2/Supporting_Files/Pandemobium-Info.plist
+++ b/PandemobiumStockTrader/iOS/PandemobiumV2/Supporting_Files/Pandemobium-Info.plist
@@ -4,6 +4,18 @@
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLName</key>
+			<string>com.denimgroup.Pandemobium</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>trade</string>
+				<string>sendtips</string>
+			</array>
+		</dict>
+	</array>
 	<key>CFBundleDisplayName</key>
 	<string>${PRODUCT_NAME}</string>
 	<key>CFBundleExecutable</key>
@@ -29,6 +41,7 @@
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
+		<string></string>
 	</array>
 	<key>UIStatusBarTintParameters</key>
 	<dict>
