--- a/PandemobiumStockTrader/iOS/PandemobiumV2/StockTrader-Info.plist
+++ b/PandemobiumStockTrader/iOS/PandemobiumV2/StockTrader-Info.plist
@@ -20,6 +20,31 @@
 	<string>1.0</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLIconFile</key>
+			<string></string>
+			<key>CFBundleURLName</key>
+			<string>com.denimgroup.Pandemobium</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>trade</string>
+			</array>
+		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>com.denimgroup.Pandemobium</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>tips</string>
+			</array>
+		</dict>
+	</array>
 	<key>CFBundleVersion</key>
 	<string>1.0</string>
 	<key>LSRequiresIPhoneOS</key>
